# CopyAndPasteDetector

./: CMakeLists.txt  CopyAndPasteDetector.cpp  LICENSE
